--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="skill-row">
           <img
             class="webd"
-            src="https://media.giphy.com/media/d9IfL7seBexHLct75B/giphy.gif"
+            src="<div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/26n7b7PjSOZJwVCmY" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/ciscoengemojis-security-26n7b7PjSOZJwVCmY">via GIPHY</a></p>"
             alt="Web Development"
           />
           <h3><u>Web Development</u></h3>
