--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="skill-row">
           <img
             class="webd"
-            src="<div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/26n7b7PjSOZJwVCmY" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/ciscoengemojis-security-26n7b7PjSOZJwVCmY">via GIPHY</a></p>"
+            src="https://media4.giphy.com/media/ZgTR3UQ9XAWDvqy9jv/giphy.gif?cid=ecf05e47xbypnbjfng0kme88gur9tp9b3982yp38puyyphey&rid=giphy.gif&ct=g"
             alt="Web Development"
           />
           <h3><u>Web Development</u></h3>
